--- a/styles/partial/_accordion.scss
+++ b/styles/partial/_accordion.scss
@@ -30,7 +30,7 @@
         background-color: transparent;
         text-align: left;
         text-decoration: underline;
-        color: $link-color;
+        color: $btn-background;
 
         &:focus,
         &:hover {
