--- a/styles/partial/_social.scss
+++ b/styles/partial/_social.scss
@@ -29,7 +29,7 @@
         border-radius: 50%;
         width: 42px;
         height: 42px;
-        background-color: color(accent, warm);
+        background-color: color(accent, warm-bloody-mary);
         text-align: center;
         line-height: 42px;
         transition: transform $transition-duration;
