--- a/styles/partial/_utility.scss
+++ b/styles/partial/_utility.scss
@@ -222,7 +222,7 @@ body::before {
             border-radius: 50%;
             width: 8px;
             height: 8px;
-            background-color: color(accent, warm);
+            background-color: color(accent, warm-bloody-mary);
             content: "";
         }
 
