--- a/styles/global/_variables.scss
+++ b/styles/global/_variables.scss
@@ -10,10 +10,10 @@
  ****************************************************************************/
 
 
-$brand-font:                "scheherazaderegular", sans-serif;
-$brand-font-b:              "scheherazadebold", sans-serif;
+$brand-font:                "game_of_squids";
+$brand-font-b:              "game_of_squids";
 
-$base-font-light:           "roboto_condensedlight", sans-serif;
+$base-font-light:           "Inter-Thin", sans-serif;
 $base-font-light-i:         "roboto_condensedlight_italic", sans-serif;
 $base-font:                 "roboto_condensedregular", sans-serif;
 $base-font-b:               "roboto_condensedbold", sans-serif;
@@ -22,7 +22,7 @@ $base-font-i:               "roboto_condensedbold_italic", sans-serif;
 
 $base-font-size:            16;
 $base-line-height:          1.5;
-$base-margin:               $base-font-size * 1px;
+$base-margin:               $base-font-size * 20px;
 
 $grid-horizontal-padding:   ($base-font-size * $base-line-height) * 1px;
 $grid-vertical-padding:     $grid-horizontal-padding;
@@ -32,31 +32,26 @@ $grid-vertical-padding:     $grid-horizontal-padding;
  * defined color map
  *
  ****************************************************************************/
-
+$eggplant: #2E162C;
 $colors: (
     primary: (
-        base: #fcb82f
-    ),
-    neutral: (
-        light: #e1e1e1,
-        base: #767676, /* lightest a11y grey */
-        dark: #271c25,
+        base-eggplant: #2E162C
     ),
     default: (
-        black: #000,
-        white: #fff,
+        light-eggShell: #F2F2F2, /* lightest text color*/
+        mid-noodle: #F2C48D, 
+        dark: #2E162C,
     ),
     accent: (
-        warm: #e62619,
-        cool: #9cafb7,
-        cool-dark: #006c67
+        warm-bloody-mary-bloody-mary: #BF212E,
+        cool-mint: #34C397,
     )
 );
 
 // color assignments - specific elements
-$site-background:   color(default, white);
+$site-background:   color(default, light-eggShell);
 $text-color:        color(neutral, dark);
-$link-color:        color(accent, warm);
+$btn-background:        color(accent, warm-bloody-mary);
 
 
 /*
