--- a/styles/partial/_typography.scss
+++ b/styles/partial/_typography.scss
@@ -37,7 +37,7 @@ body {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-bottom: $base-margin;
-    font-family: $brand-font-b;
+    font-family: $brand-font;
 }
 
 h1,
@@ -156,7 +156,7 @@ ol {
             left: -$grid-horizontal-padding;
             display: inline-block;
             width: 18px;
-            background-color: color(accent, warm);
+            background-color: color(accent, warm-bloody-mary);
             text-align: center;
             color: color(default, white);
             counter-increment: paragraph;
@@ -176,7 +176,7 @@ blockquote { margin: 0; }
 // basic text link
 a {
     font-weight: bold;
-    color: $link-color; /* default color */
+    color: $btn-background; /* default color */
 
     &:focus,
     &:hover { text-decoration: none; }
@@ -196,7 +196,7 @@ hr {
     margin: 60px auto;
     max-width: 200px;
     height: 3px;
-    border-top: 3px solid color(accent, warm);
+    border-top: 3px solid color(accent, warm-bloody-mary);
 }
 
 .img-illustration {
