--- a/styles/bcp14Styles.css
+++ b/styles/bcp14Styles.css
@@ -139,7 +139,7 @@ p {
 
 #about {
     width: 100%;
-    height: 1350px;
+    height: 850px;
     background-color: #34C397; /* $mint */
 }
 
@@ -192,7 +192,30 @@ p {
 
 /* Location Section */
 
+#location {
+    width: 100%;
+    height: 1200px;
+    background-color: #2E162C; /* $eggplant */
+}
+
+.bcp-location {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+
+/* End Location Section */
+
 /* Registration Section */
+
+#register {
+    width: 100%;
+    height: 350px;
+    background-color: #34C397; /* $mint */
+}
+
+/* End Registration Section */
 
 /* Effiency Section */
 
@@ -222,7 +245,20 @@ p {
     color: #F2F2F2; /* $egg-shell*/ 
 }
 
-.registration-btn p {
+.registration-btn2 {
+    width: 348px; 
+    height: 60px; 
+    margin: 0 auto;
+    position: relative;
+    background: #BF212E; /* $bloody-mary */
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25); 
+    border-radius: 42px; 
+    font-family: 'Inter', sans-serif; 
+    font-weight: 500;
+    color: #F2F2F2; /* $egg-shell*/ 
+}
+
+.registration-btn p, .registration-btn2 p {
     position: absolute; 
     text-align: center; 
     margin: 0.8rem 0 0 3rem;
