--- a/styles/bcp14Styles.css
+++ b/styles/bcp14Styles.css
@@ -26,6 +26,7 @@
   * {
    margin: 0;
    padding: 0;
+   box-sizing: border-box;
   }
   
   /*
@@ -43,13 +44,12 @@ h1, h2, h3, h4, p {
 h1 {
     font-family: var(--font-family-serif);
     font-size: 52px; 
-    padding-top: 10px;
 }
 
 h2 {
     font-size: 30px;
     font-family: var(--font-family-serif);
-    padding-top: 3%;
+    
 }
 
 h4 {
@@ -77,6 +77,7 @@ p {
   color: var(--color-noodle);
   margin-top: 0;
   padding: 4rem 3rem;
+  max-width: 100vw;
 }
 
 .section--inverted {
@@ -132,20 +133,20 @@ p {
 
 
 /* Hero Section */
-#bcp-hero{
-    background-color: var(--color-eggplant); 
-    height: 650px;
-    width: 100%;
- }
+
 
  .bcp14-hero {
     width: 100%;
-    height: 100%;
+    height: 650px;
     margin: 0 auto;
-    position: absolute;
+    position: relative;
     background-image: url(../images/bcp14-hero.png);
     background-repeat: no-repeat;
     background-size: contain;
+    display: flex;
+    flex-direction: column 1fr 2fr 1fr;
+    justify-content:flex-end;
+    align-items:flex-end;
 }
 
 /* Join | About Section */
@@ -175,7 +176,9 @@ p {
 #about {
     width: 100%;
     height: 850px;
-    background-color: var(--color-mint); 
+    background-color: var(--color-mint);
+    align-content: center;
+    padding: 40px 0; 
 }
 
 .about-text {
@@ -253,10 +256,22 @@ p {
 
 /* Registration Section */
 
-#register {
+.register {
     width: 100%;
-    height: 350px;
-    background-image: url(..images/register-bg.png);
+    height: 420px;
+    background-image: url(../images/registration-banner-10.png);
+    margin: 0 auto;
+    position: relative;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column 1fr 2fr 1fr;
+    justify-content: center;
+    align-items:flex-end;
+    
+}
+
+.register button {
+    margin-top: 10px;
 }
 
 
@@ -288,39 +303,34 @@ p {
 
 /*Button Styles*/
 
-
+/* Register Button */
 .btn--register {
     width: 348px; 
     height: 60px; 
     margin: 0 auto;
     position: relative;
     background: var(--color-bloody-mary);
-    /* box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0.25, 0.25); 
     border-radius: 42px; 
     font-family: 'Inter', sans-serif; 
     color: var(--color-egg-shell); 
     font-weight: var(--font-weight-semibold);
+    text-shadow: var(--text-shadow-base);
     border: none;
     cursor: pointer;
+    font-size: large;
 }
 
-.btn--register p {
-    position: absolute; 
-    text-align: center; 
-    margin: 0.8rem 0 0 2.5rem;
-    font-size: 23px; 
-    padding: 5px 0;
-}
-
-/*.btn--register:hover {
-    
+.btn--register:hover {
+    background: var(--color-mint);
+    color: var(--color-egg-shell);
 }
 
 .btn--register:active {
-
+    background: var(--color-bloody-mary);
+    color: var(--color-egg-shell);
 }
-*/
-
+/* Normal Button */
 .btn {
     width: 290px; 
     height: 54px; 
@@ -335,15 +345,20 @@ p {
     border-radius: 42px;
     text-shadow: var(--text-shadow-base);
     font-weight: var(--font-weight-bold);
+    font-size: medium;
 }
 
-.btn p {
-    position: relative; 
-    text-align: center; 
-    margin: 0.8rem 0 rem;
-    font-size: 23px; 
-    padding: 5px 0;
+.btn:hover {
+    background: var(--color-bloody-mary);
+    color: var(--color-egg-shell);
 }
+
+.btn:active {
+    background: var(--color-mint);
+    color: var(--color-egg-shell);
+}
+
+
 
 
 /* End Button Styles */
