--- a/styles/base.css
+++ b/styles/base.css
@@ -96,4 +96,15 @@
 a {
   color: inherit;
   text-decoration: none;
+  font-family: var(--font-family-sans-serif);
+}
+
+p {
+  font-family: var(--font-family-sans-serif);
+  
+}
+
+ul {
+  font-family: var(--font-family-sans-serif);
+  padding: 1rem 2.5rem;
 }
