chariot solutions logo added.

--- a/styles/index.css
+++ b/styles/index.css
@@ -115,7 +115,7 @@
 }
 
 .sponsor-group {
-  background: var(--color-white);
+  background: var(--color-noodle);
   padding: 0.5rem 0 0.5rem 0;
 }
 
