Update CSS to have three evenly spaced columns.

--- a/styles/index.css
+++ b/styles/index.css
@@ -61,6 +61,12 @@
   flex-direction: column;
 }
 
+/* Lunch Section */
+
+.section-contents--lunch {
+  flex-direction: column;
+}
+
 /* Nearby Pseudo-Section */
 
 .nearby {
