--- a/styles/components.css
+++ b/styles/components.css
@@ -255,6 +255,9 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0;
 }
 
 .trifold-fold--dashed {
